; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/block/paride/extr_ppc6lnx.c_ppc6_wr_port.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/block/paride/extr_ppc6lnx.c_ppc6_wr_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ACCESS_PORT = common dso_local global i32 0, align 4
@ACCESS_WRITE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32)* @ppc6_wr_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ppc6_wr_port(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @ACCESS_PORT, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @ACCESS_WRITE, align 4
  %12 = or i32 %10, %11
  %13 = call i32 @ppc6_send_cmd(i32* %7, i32 %12)
  %14 = load i32*, i32** %4, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @ppc6_wr_data_byte(i32* %14, i32 %15)
  ret void
}

declare dso_local i32 @ppc6_send_cmd(i32*, i32) #1

declare dso_local i32 @ppc6_wr_data_byte(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
